History Screen done

--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -45,7 +45,7 @@
         android:layout_margin="20dp"
         android:fontFamily="@font/secular_one"
         android:gravity="center"
-        android:text="आपला  इतिहास"
+        android:text="@string/apala_itihas"
         android:textColor="@color/colorSecondaryDark"
         android:textSize="20sp"
         android:textStyle="bold" />
@@ -68,9 +68,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="20dp"
-                android:text="          हे महाराष्ट्रातील एक प्रमुख शहर असून ते पश्चिम महाराष्ट्र या विभागात येते.सोलापूर हे महाराष्ट्रातील ५ वे मोठे शहर आहे. ते सोलापूर जिल्ह्याचे प्रशासकीय मुख्यालय आहे. सोलापूरला कापड गिरण्यांचे शहर म्हटले जाते. सोलापूर या शहराला प्राचीन काळात सोन्नलागी किंवा सोन्नलापूर म्हणूनसुद्धा ओळखले जात असे. हे शहर भारतातील मुख्य अशा उत्तर-दक्षिण रेल्वे मार्गावर असल्याने त्यास महत्त्व प्राप्त झाले आहे. स्वातंत्र्यप्राप्तीपूर्वीच सोलापूर शहराने ९-११ मे १९३० या काळात ३ दिवसांचे स्वातंत्र्य उपभोगले. या घटनेमुळे स्वातंत्र्य संग्रामादरम्यान मलप्पा धनशेट्टी, जगन्नाथ शिंदे, कुर्बान हुसेन व किसन सारडा यांना जानेवारी १२, १९३१ रोजी ब्रिटिशांनी सोलापूरमध्ये फाशी दिली. तेव्हापासून शहरास हुतात्म्यांचे शहर म्हणून ओळखले जाते. विडी उत्पादनात सोलापूरचा महाराष्ट्रात वरचा क्रमांक आहे तर 'सोलापुरी चादरी' प्रसिद्ध आहेत.
-सोलापूराचे प्राचीन म्हणजे १२व्या शतकातील रहिवासी श्री.शिवयोगी सिद्धेश्वर यांनी या परिसरात अडुसष्ट शिवलिंगांची स्थापना केली वीरशैव धर्माच्या (शैव पंथ) माध्यमातून समाज सुधारणांचे काम केले. सोलापूर तलाव बांधून त्यांनी सोलापूराची पाणी समस्या सोडवली.
-    पंढरपूर हे महाराष्ट्राचे कुलदैवत सोलापूरजवळ असून अक्कलकोटचे प्रसिद्ध स्वामी समर्थ मंदिर सोलापूर जिल्ह्यात आहे. बार्शी येथे भगवंताचे म्हणून ओळखले जाणारे विष्णूचे प्राचीन मंदिर आहे येथील शिवगंगा मातेच्या मंदिराचा कळस शंभर तोळे सोन्यापासून बनलेला आहे, आणि दरवाजा ऐंशी किलो चांदीपासून बनलेला आहे. सोलापूर येथील भुईकोट किल्ला, सिद्धेश्वर मंदिर, मल्लिकार्जुन मंदिर, हुतात्मा बाग, इंद्रभुवन (महानगर पालिका इमारत), शुभराय आर्ट गॅलरी, स्मृती उद्यान ही भेट देण्यासारखी ठिकाणे आहेत. हुतात्मा स्मृती मंदिर येथे अनेक कला प्रदर्शन आणि नाट्यप्रयोग मोठ्या प्रमाणात होत असतात. सोलापूरमध्ये दरवर्षी सिद्धेश्वर यात्रा म्हणजेच गड्डा  ही मोठी यात्रा असते. कर्नाटक परिसरातून लोक येतात. सरकारच्या स्मार्ट सिटींमध्ये सोलापूरचे नाव यादीत समाविष्ट झाल्याने आता सोलापूरही स्मार्ट शहर बनण्याकडे वाटचाल करताना दिसते आहे."
+                android:text="@string/itihas"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="16sp" />
 
@@ -83,7 +81,7 @@
                 android:drawableRight="@drawable/ic_baseline_keyboard_arrow_down_24"
                 android:fontFamily="@font/secular_one"
                 android:padding="10dp"
-                android:text="इतिहास"
+                android:text="@string/itihas1"
                 android:textColor="@color/colorSecondaryDark"
                 android:clickable="true"
                 android:foreground="?android:selectableItemBackground"
@@ -97,8 +95,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="10dp"
-                android:text="सोलापूरला एक ऐतिहासिक वारसा लाभलेला आहे. इ.स.पू. २०० वर्षापासून सातवाहन, चालुक्य, राष्ट्रकूट, यादव, बहामनी, अहमदनगरची निजामशाही, आदिलशाही, मराठे-पेशवे व ब्रिटिश या सर्व राजवटी सोलापूर जिल्ह्याने अनुभवल्या. यादवांच्या काळात या भागाला सोन्नलगी म्हटले जात होते. मुघल राजवटीत यास संदलपूर असेही म्हटले जात होते. ब्रिटिश काळात सोलापूर हे नाव रूढ झाले असावे असा अंदाज व्यक्त केला जातो. सोलापूरला सोन्नलगिरी, गिरणगाव अशा नावानेही ओळखले जाते. सोलापूरचा इतिहास रोमांचक आहे. मुंबई-चेन्नई रेल्वे मार्गावरील महत्त्वाचे स्थानक असल्यामुळे स्वातंत्र्यपूर्व काळात राष्ट्रीय पातळीवरील सर्व राजकीय-सामाजिक घडामोडींचे पडसाद सोलापूमध्ये उमटत असत. पहिल्या महायुद्धानंतर भारतात कामगारांनी मोठा संप पुकारला. सोलापूरलाही जानेवारी, १९२० मध्ये कामगारांनी ब्रिटिश साम्राज्यशाहीच्या विरोधात संप पुकारला होता.१९३० च्या सविनय कायदेभंग चळवळीत सोलापूरकर हिरिरीने सहभागी झाले होते. या सत्याग्रहात दारुबंदीचा प्रचार करण्यासाठी काही तरुण कार्यकर्त्यांनी मोर्चा काढला. या वेळी शंकर शिवदारे हा तरुण तिरंगा हातात घेऊन पुढे धावला व ब्रिटिशांच्या गोळीबारात बळी पडला. हा शंकर शिवदारे सोलापूरचा पहिला हुतात्मा. या हौतात्म्यामुळे सोलापूरकर पेटून उठले. पण दि. ८,९ मे, १९३० या दोन दिवसांत तत्कालीन कलेक्टर नाईट याने जमावांवर अमानुष गोळीबार केला. अनेक नागरिक गोळीबारात बळी पडले. या आंदोलनादरम्यान दि.९,१०,११ मे, १९३० असे तीन दिवस सोलापूर ब्रिटिशांच्या अधिपत्याखाली नव्हते, मुक्त होते. भारतातील (काही काळासाठी) ‘स्वतंत्र’ झालेला असा हा पहिला भाग! मे- जून, १९३०मध्ये सुमारे ४९ दिवस सोलापूरला मार्शल लॉ लागू केला होता. या काळात सोलापूरच्या ४ निरपराध युवकांना फाशी देण्यात आले. अब्दुल कुर्बान हुसेन, मल्लप्पा धनशेट्टी, श्रीकिसन सारडा व जगन्नाथ शिंदे हे सोलापूरचे युवक दि. १२ जानेवारी, १९३१ रोजी धीरोदात्तपणे फासावर चढले. या प्रेरणादायी क्रांतिपर्वामुळेच सोलापूरला हुतात्म्यांचे शहर म्हटले जाते. पुतळ्यांच्या माध्यमातून आज या हुतात्म्यांची स्मृती सोलापुरात जतन करण्यात आली आहे. १९३०-३१ मधील या घटनांचे संदर्भ तत्कालीन ‘केसरी’ मध्ये आढळतात. १२ जानेवारी हा दिवस सोलापूरकर हुतात्मा दिन म्हणून पाळतात.
-तसेच पूर्वीचे गिरणगाव, हुतात्म्यांचे गाव, सध्याचे ज्वारीचे कोठार, तेलगू, कन्नड व मराठी असा भाषा-त्रिवेणी संगम झालेला बहुभाषिक जिल्हा आणि टॉवेल, चादरी निर्माण करणारा जिल्हा म्हणून सोलापूर प्रसिद्ध आहे. पर्यटन, फलोत्पादन, कृषी प्रक्रिया उद्योग, शिक्षण, आरोग्यसेवा व कापड उद्योग (हातमाग, यंत्रमाग) या क्षेत्रांमध्ये जिल्ह्याचा विकास साधण्याची क्षमता निश्चितच आहे. सोलापूर जिल्हा हा दुष्काळी भाग म्हणून ओळखला जातो. हुतात्मा जगन्नाथ शिंदे हे सोलापूर शहरात दक्षिण कसबा येथे शिंदे चौकात राहत होते. सोलापूर शहराचे भारताच्या स्वातंत्र्य लढ्यात मोठे योगदान असल्याचे दिसून येते. हुतात्मा शिंदे ज्या वास्तूमध्ये राहत होते ती वास्तू आज मोडकळीस आली आहे. तेथे आज कोणी वास्तव्यास नाही. त्यांना मुले नव्हती. त्याच्या भगिनी ताराबाई ह्या शिक्षिका होत्या. १९३७ साली स्वतंत्र मजूर पक्षाच्या प्रचारासाठी डॉ. बाबासाहेब आंबेडकर सोलापुरात आले होते. तसेच सोलापूर हे आंबेडकर चळवळीचे केंद्र आहे असे मानले जाते. पंढरपूर येथे पुण्यश्लोक अहिल्यादेवीनी बांधलेला होळकर वाडा आहे. तसेच चंद्रभागा नदीवरील घाट ही पुण्यश्लोक अहिल्यादेवीनी बांधलेला आहे. सोलापूरची सध्या स्मार्ट शहर म्हणून प्रगती होत आहे. सोलापूर हे सिद्धरामेश्वर नगरी म्हणून ओळखले जाते."
+                android:text="@string/itihas_text"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="16sp"
                 android:visibility="gone" />
@@ -112,7 +109,7 @@
                 android:drawableRight="@drawable/ic_baseline_keyboard_arrow_down_24"
                 android:fontFamily="@font/secular_one"
                 android:padding="10dp"
-                android:text="नाव"
+                android:text="@string/nav"
                 android:textColor="@color/colorSecondaryDark"
                 android:clickable="true"
                 android:foreground="?android:selectableItemBackground"
@@ -126,7 +123,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="10dp"
-                android:text="सोलापूर ह्या नावाचा उगम 'सोला (सोळा) आणि पूर (गावे)' या दोन शब्दापासून झाला आहे. असे मानले जाते की, सध्याचे सोलापूर शहर हे अहमदपूर, आदिलपूर, काळजापूर, खडारपूर, खान्देरवाडी, चपळदेव, जामदारवाडी, फतेहपूर, मुहम्मदपूर, राणापूर, शेखपूर, सन्दलपूर, सोनापूर सोन्नलगी, सोलापूर आणि वैदकवाडी ह्या सोळा गावांपासून बनले आहे पूर्वीचे गिरणगाव, हुतात्म्यांचे गाव, सध्याचे ज्वारीचे कोठार, तेलगू, कन्नड व मराठी असा भाषा-त्रिवेणी संगम झालेला बहुभाषिक जिल्हा आणि टॉवेल, चादरी निर्माण करणारा जिल्हा म्हणून सोलापूर प्रसिद्ध आहे. पर्यटन, फलोत्पादन, कृषी प्रक्रिया उद्योग, शिक्षण, आरोग्यसेवा व कापड उद्योग (हातमाग, यंत्रमाग) या क्षेत्रांमध्ये जिल्ह्याचा विकास साधण्याची क्षमता निश्चितच आहे. सोलापूर जिल्हा हा दुष्काळी भाग म्हणून ओळखला जातो .हुतात्मा जगन्नाथ शिंदे हे सोलापूर शहरात दक्षिण कसबा येथे शिंदे चौकात राहत होते. सोलापूर शहराचे भारताच्या स्वातंत्र्य लढ्यात मोठे योगदान असल्याचे दिसून येते."
+                android:text="@string/nav_text"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="16sp"
                 android:visibility="gone" />
@@ -140,7 +137,7 @@
                 android:drawableRight="@drawable/ic_baseline_keyboard_arrow_down_24"
                 android:fontFamily="@font/secular_one"
                 android:padding="10dp"
-                android:text="भूगोल"
+                android:text="@string/bhugol"
                 android:textColor="@color/colorSecondaryDark"
                 android:clickable="true"
                 android:foreground="?android:selectableItemBackground"
@@ -154,10 +151,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="10dp"
-                android:text="सोलापूर जिल्ह्याचे एकूण क्षेत्रफळ १५ हजार चौरस किलोमीटर आहे. सोलापुरातील सरासरी पर्जन्यमान ५४५ मिलिमीटर (महाराष्ट्रातील सर्वात कमी) आहे. जिल्ह्याची लोकसंख्या ३८,४९,५४३(इ.स. २००१) आहे. भीमा नदी जिल्ह्यातील प्रमुख नदी आहे. जिल्ह्यात डोंगराळ भाग जवळजवळ नाही.
-सोलापूर जिल्ह्याच्या उत्तरेस अहमदनगर व उस्मानाबाद; पूर्वेला उस्मानाबाद, दक्षिणेस सांगली व विजापूर जिल्हा व (कर्नाटक) तर पश्र्चिमेस पुणे,सांगली,सातारा हे जिल्हे आहेत. जिल्ह्याच्या उत्तर, ईशान्य व पूर्व भागात बालाघाटच्या डोंगररांगा आहेत. तसेच पश्चिम व नैर्ॠत्य या भागांत महादेवाचे डोंगर आहेत. जिल्ह्याचा इतर भाग सपाट, पठारी आहे. या जिल्ह्याचे हवामान सर्वसाधारणपणे उष्ण व कोरडे आहे. काही भागांत उन्हाळ्यात कमाल तापमान ४२ ते ५० अंश सेल्सिअसपर्यंत जाते.
-जिल्ह्यात वायव्येकडून आग्नेयेकडे वाहणारी भीमा नदी जिल्ह्याचे दोन भाग करते. भीमेची जिल्ह्यातील लांबी सुमारे २९० कि.मी. आहे. भीमा पंढरपूर येथे चंद्रभागा या नावाने ओळखली जाते. नीरा-भीमा संगम माळशिरस तालुक्यात, तर भीमा-सीना संगम दक्षिण सोलापूर तालुक्यात हत्तरसंग-कुडल येथे होतो. जिल्ह्यातून सीना, नीरा, भोगावती, हरणी, बोटी, माण या छोट्या-मोठ्या नद्या वाहतात.
-सोलापूर-पुणे जिल्ह्यांच्या सीमेवर माढा तालुक्यात उजनी येथे भीमा नदीवर धरण बांधण्यात आलेले आहे. या धरणामुळे सोलापूर शहरासह जिल्ह्यातील्या पश्र्चिम व मध्य भागांत सुलभतेने पाणीपुरवठा होतो. १९८० मध्ये बांधून पूर्ण झालेल्या उजनी धरणाच्या जलाशयाला यशवंतसागर असे म्हटले जाते. शेतीसाठी सिंचन, पिण्यासाठी पाणी, उद्योगांना पाणी, साखर कारखान्यांना पाणी, विद्युतनिर्मिती असे अनेक उद्देश साध्य करणारा हा बहुउद्देशीय प्रकल्प आहे. या धरणाच्या परिसरात फ्लेमिंगो (रोहित) पक्षी आढळतात. भीमा-सीना जोडकालव्यामुळे जिल्ह्यातील सात तालुक्यांना लाभ होतो. भीमा-सीना बोगदा हा आशिया खंडातील सर्वांत मोठा(?) बोगदा आहे. उजनी धरणातून या बोगद्याद्वारे सीना नदीत पाणी सोडले जाते. याचबरोबर जिल्ह्यात सहा (६) मध्यम पाणीप्रकल्प आहेत. उत्तर सोलापूर तालुक्यात एकरूखे (हिप्परगी) तलाव आहे. याचाही फायदा आसपासच्या भागांतील लोकांना होतो. सोलापूर हा जिल्हा धान्याचे कोठार आहे."
+                android:text="@string/bhugol_text"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="16sp"
                 android:visibility="gone" />
@@ -171,7 +165,7 @@
                 android:drawableRight="@drawable/ic_baseline_keyboard_arrow_down_24"
                 android:fontFamily="@font/secular_one"
                 android:padding="10dp"
-                android:text="जैवविविधता"
+                android:text="@string/jai"
                 android:textColor="@color/colorSecondaryDark"
                 android:clickable="true"
                 android:foreground="?android:selectableItemBackground"
@@ -185,7 +179,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="10dp"
-                android:text="भारतीय डाळिंबे जगाच्या बाजारपेठेत तोरा मिरवत असताना सोलापूरच्या मातीत पिकलेल्या डाळिंबांना 'सोलापूर डाळिंब' असा विशेष भौगोलिक निर्देशांक मिळाल्याने सोलापूरची डाळिंबे आंतरराष्ट्रीय बाजारात आता वेगळा तोरा मिरवणार आहेत. सोलापूरच्या डाळिंबांना एक वेगळी प्रतिष्ठा मिळाली असून त्यामुळे निर्यातीला मोठा मिळाला आहे."
+                android:text="@string/jai_text"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="16sp"
                 android:visibility="gone" />
@@ -199,7 +193,7 @@
                 android:drawableRight="@drawable/ic_baseline_keyboard_arrow_down_24"
                 android:fontFamily="@font/secular_one"
                 android:padding="10dp"
-                android:text="बाजारपेठ"
+                android:text="@string/bajar"
                 android:textColor="@color/colorSecondaryDark"
                 android:clickable="true"
                 android:foreground="?android:selectableItemBackground"
@@ -213,9 +207,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="10dp"
-                android:text="सोलापूर शहरात हातमागावर नऊ वारी साडी तयार करण्याची प्रथा आहे. या साडीचा पोत हा इतका सुंदर असतो की प्रत्येक स्त्रीला हवाहवासा वाटतो. इथल्या नऊवारी साडीला मोठ्या प्रमाणावर मागणी आहे. त्यामुळे सोलापूरची बाजारपेठ आजही प्रसिद्ध असल्याचे दिसून येते. सोलापूर शहर हे कामगारची वस्ती म्हणून ओळखले जाते.याचे मुख्य कारण म्हणजे पूर्वीपासून चालत आलेला हातमाग व्यवसाय आणि आता सुरू असलेला पाॅवर लूमचा व्यवसाय मोठ्या प्रमाणात चालू असून आज त्याबरोबरच महिला बिडी उद्योग यामुळे सोलापूरला ही ओळख प्राप्त झाली.
-सोलापूर जिल्हा हा ज्वारीचे कोठार म्हणून ओळखला जातो. बार्शी तालुक्यासह आजूबाजूच्या खेड्यातून मोठ्या प्रमाणातून ज्वारीची आयात केली जाते. यासाठी मंगळवेढा हा तालुका प्रसिद्ध आहे.
-सोलापूर जिल्ह्यामधील बार्शी तालुक्यामध्ये डाळीचे उत्पादन मोठ्या प्रमाणात होते."
+                android:text="@string/bajar_text"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="16sp"
                 android:visibility="gone" />
@@ -229,7 +221,7 @@
                 android:drawableRight="@drawable/ic_baseline_keyboard_arrow_down_24"
                 android:fontFamily="@font/secular_one"
                 android:padding="10dp"
-                android:text="प्रशाशन"
+                android:text="@string/pra"
                 android:textColor="@color/colorSecondaryDark"
                 android:clickable="true"
                 android:foreground="?android:selectableItemBackground"
@@ -243,9 +235,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="10dp"
-                android:text="सोलापूर शहरात हातमागावर नऊ वारी साडी तयार करण्याची प्रथा आहे. या साडीचा पोत हा इतका सुंदर असतो की प्रत्येक स्त्रीला हवाहवासा वाटतो. इथल्या नऊवारी साडीला मोठ्या प्रमाणावर मागणी आहे. त्यामुळे सोलापूरची बाजारपेठ आजही प्रसिद्ध असल्याचे दिसून येते. सोलापूर शहर हे कामगारची वस्ती म्हणून ओळखले जाते.याचे मुख्य कारण म्हणजे पूर्वीपासून चालत आलेला हातमाग व्यवसाय आणि आता सुरू असलेला पाॅवर लूमचा व्यवसाय मोठ्या प्रमाणात चालू असून आज त्याबरोबरच महिला बिडी उद्योग यामुळे सोलापूरला ही ओळख प्राप्त झाली.
-सोलापूर जिल्हा हा ज्वारीचे कोठार म्हणून ओळखला जातो. बार्शी तालुक्यासह आजूबाजूच्या खेड्यातून मोठ्या प्रमाणातून ज्वारीची आयात केली जाते. यासाठी मंगळवेढा हा तालुका प्रसिद्ध आहे.
-सोलापूर जिल्ह्यामधील बार्शी तालुक्यामध्ये डाळीचे उत्पादन मोठ्या प्रमाणात होते."
+                android:text="@string/pra_text"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="16sp"
                 android:visibility="gone" />
@@ -259,7 +249,7 @@
                 android:drawableRight="@drawable/ic_baseline_keyboard_arrow_down_24"
                 android:fontFamily="@font/secular_one"
                 android:padding="10dp"
-                android:text="आवांतर"
+                android:text="@string/awa"
                 android:textColor="@color/colorSecondaryDark"
                 android:clickable="true"
                 android:foreground="?android:selectableItemBackground"
@@ -273,12 +263,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:layout_marginBottom="10dp"
-                android:text="सोलापूर जिल्हा वेगवेगळ्या कालखंडात आंध्रभृत्य, चालुक्य, राष्ट्रकूट, यादव व बहामनी घराण्यांच्या अधिपत्याखाली होता. सोलापूर हे नाव सोळा म्हणजे सोळा व पूर म्हणजे गाव असे तयार झाले ही धारणा आहे. सध्याचे सोलापूर शहर हे अहमदपूर, चपळदेव, फतेपूर, जामदारवाडी, काळजापूर, खादरपूर, खांडेकरवाडी, महमदपूर, राणापूर, संदलपूर, शेखपूर, सोलापूर, सोन्नलगी, सोनपूर व वैदकवाडी या सोळा गावांच्या एकत्रीकरणाने बनले आहे. से समजले जाते.
-पण नवीन संशोधनानुसार सोलापूर हे नाव सोळा गावांच्या एकत्रीकरणाने बनलेले नाही, असे सांगितले जाते. शिवयोगी श्री सिद्धेश्वर लिखित शिलालेखानुसार गावाला सोन्नलगे हे नाव होते. कालांतराने सोन्नलगे चे सोन्नलगी असे रूपांतर झाले. आणि यादव वंशापर्यंत सोलापूरचे लेखन सोन्नलगी असे होते.
-मोहोळ तालुक्यातील कामती येथे सापडलेल्या शके १२३८च्या संस्कृत शिलालेखानुसार सोलापूर नगरीला सोनलपूर असे म्हणत. सोलापूर भुईकोट किल्ल्यात सापडलेल्या एका शिलालेखानुसार सोनलपूर असा उल्लेख होतो. तर त्याच किल्ल्यातील दुसऱ्या भिंतीवर सापडलेल्या शिलालेखानुसार या नगरीचा उल्लेख संदलपूर असे केलेले आहे.
-मुस्लिम काळात या शहराला सोनलपूर असे संबोधण्यात येत होते. काळाच्या ओघात सोनलपूर मधील ‘न’ गाळला जाऊन सोलपूर नंतर सोलापूर असे नाव प्रचलित झाले असावे. त्यानंतर ब्रिटिश शासकांनी सोलापूर ऐवजी शोलापूर असे स्पेलिंग केले.
-सध्याचा सोलापूर जिल्हा हा पूर्वी अहमदनगर, पुणे व सातारा या जिल्ह्याचा भाग होता. इसवी सन १८३८ ला अहमदनगरचा उपजिल्हा बनला. त्यामध्ये बार्शी, मोहोळ, माढा, करमाळा, इंडी, हिप्परगी आणि मुद्देबिहाळ हे उपविभाग होते. इसवी सन १८६४ मध्ये हा उपविभाग काढून टाकण्यात आला. इसवी सन १८७१ मध्ये सोलापूर, बार्शी, मोहोळ, माढा आणि करमाळा हे उपविभाग व सातारा जिल्ह्यातील पंढपूर, सांगोला उपविभाग एकत्र करून सोलापूर जिल्ह्याची निर्मिती करण्यात आली व इसवी सन १८७५ मध्ये माळशिरस हे उपविभाग देखील सोलापूर जिल्ह्याला जोडण्यात आले. १९५६ मध्ये राज्य पुनर्रचनेनुसार सोलापूरचा समावेश मुंबई राज्यात करण्यात आला. व इसवी सन १९६०मध्ये महाराष्ट्राचा एक परिपूर्ण जिल्हा म्हणून जाहीर झाला.
-स्वातंत्रपूर्व काळापासून स्वातंत्र मिळवण्याआधी सोलापूरचे महत्त्व भारताच्या इतिहासात अद्वितीय आहे. सोलापूरच्या नागरिकांना इ.स. १९३० मधील तारखा ९-१०-११ असे तीन दिवस स्वातंत्र्य मिळाले. मे १९३० रोजी महात्मा गांधींना अटक झाली. संपूर्ण भारतभर लोक ब्रिटिशांवर क्षुब्ध झाले. सोलापूरात मोर्चे व आंदोलने झाली. पोलिसांच्या गोळीबारात अनेक नागरिकांना जीव गमवावा लागला. यामुळे प्रक्षुब्ध जमावाने चपळ स्टेशनवर हल्ला केला. पोलिस आणि अन्य अधिकारी सोलापूर शहराच्या बाहेर पळत होते. या काळात कायदा सुव्यवस्थेची जबाबदारी आणि नागरिकांच्या सुरक्षेची जबाबदारी काँग्रेस पक्षाच्या नेत्याच्या खांद्यावर होती. त्यानंतर इतर काँग्रेसचे नेते श्री. रामकृष्ण जाजू यांनी १९३० मधील तारखा ९-१०-११ या तीन दिवसांच्या काळात कायदा व सुव्यवस्था राखली. स्वातंत्र्यापूर्वीच इ स वी सन १९३० मध्ये महापालिकेच्या इमारतीवर सर्वप्रथम राष्ट्रीय ध्वज फडकवणारी भारतातील एकमेव नगरपालिका होती. याचा थोडक्यात इतिहास म्हणजे – महात्मा गांधी यांच्या दांडी यात्रेची प्रेरणा घेवून सोलापूरमधील स्वातंत्र सैनिकांनी सोलापूर पालिकेवर राष्ट्रध्वज फडकवण्याचा निर्णय घेतला त्याप्रमाणे ६ एप्रिल १९३० रोजी पुण्याचे ज्येष्ठ स्वातंत्र्यसैनिक अण्णासाहेब भोपटकर यांनी सोलापूर पालिकेवर राष्ट्रध्वज फडकावला. संपूर्ण देशभरात ही पहिली व एकमेव घटना होती. या घटनेने संतापून ब्रिटिश राज्यकर्त्यांनी सोलापूर येथे मार्शल लाँ घोषित केला. अनेक नेत्यांना व निर्दोष नागरिकांना खोट्या आरोपाखाली अटक केली. स्वातंत्र्यसैनिक श्री मल्लप्पा धंनशेट्टी, श्री कुर्बान हुसेन, श्री जगन्नाथ शिंदे व श्री किसन सारडा यांना मंगळवार पोलिस ठाण्यात दोन पोलिसांच्या हत्यांच्या आरोपाखाली अटक करण्यात आली. निम्न न्यायालयाने या स्वातंत्र्यसैनिकांना मरेपर्यंत फाशीची शिक्षा सुनावली. उच्च न्यायालयानेपण वरील शिक्षा कायम ठेवली व या चार स्वातंत्र्यसैनिकांना १२ जानेवारी १९३१ रोजी फाशीची शिक्षा देण्यात आली. या स्वातंत्र्यसैनिकांचा आदर म्हणून शहराच्या मध्यवर्ती भागात पुतळे बसवण्यात आले व त्या स्थानाला हुतात्मा चौक असे नाव दिले."
+                android:text="@string/awa_text"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="16sp"
                 android:visibility="gone" />
