--- a/app/src/main/res/layout/activity_devo_info.xml
+++ b/app/src/main/res/layout/activity_devo_info.xml
@@ -44,7 +44,7 @@
         android:layout_below="@id/image"
         android:layout_margin="10dp"
         android:fontFamily="@font/secular_one"
-        android:text="श्री सिद्धेश्वर मंदिर, सोलापूर"
+        android:text="@string/siddheshwar_mandir_name"
         android:textColor="@color/colorSecondaryDark"
         android:textSize="20sp"
         android:textStyle="bold" />
@@ -55,19 +55,139 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/name"
         android:layout_marginStart="10dp"
+        android:fontFamily="@font/secular_one"
         android:drawableLeft="@drawable/ic_baseline_location_on_24"
         android:text=" सोलापूर शहर"
         android:textSize="14sp" />
 
-    <TextView
-        android:id="@+id/info"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@id/location"
-        android:layout_marginTop="10dp"
-        android:padding="20dp"
-        android:text="भुईकोट किल्ल्याच्या सभोवतालच्या तलावाच्या मध्ये स्थित, सिद्धेश्वर मंदिर भगवान शिव आणि भगवान विष्णू यांचा अवतार मानल्या जाणार्‍या भगवान सिद्धेश्वरासाठी पवित्र आहे. श्री सिद्धेश्वर समाधी घेतलेले हे स्थान म्हणूनच मंदिर भक्तांनी खूप आदर केला आहे. मुख्य मंदिर संकुलात, एक सुंदर गर्भगृह आहे, ज्यामध्ये सिद्धेश्वरची मूर्ती आहे. मुख्य प्रांगणात, तेथे 68 शिवलिंगे आहेत, जी भगवान सिद्धेश्वरांनी स्थापित केली होती. अमृत ​​लिंग आणि भगवान गणेश मंदिरांचा विशेष उल्लेख आहे. चांदीच्या मुलामा असलेली नंदी, विठोबाचे मंदिर आणि देवी रुक्मिणी आणि इतर अनेक देवता मंदिराचा एक भाग आहेत. मंदिराच्या मध्यभागी सिद्धेश्वरची संगमरवरी समाधी आहे. येथील सर्व भाविकांना महाप्रसाद दिला जातो."
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="16sp" />
+        android:layout_marginBottom="10dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/sid"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <TextView
+                    android:id="@+id/info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/secular_one"
+                    android:padding="20dp"
+                    android:text="@string/siddheshwar_info"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/tul"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/secular_one"
+                    android:padding="20dp"
+                    android:text="@string/tuljapur_info"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/pan"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/secular_one"
+                    android:padding="20dp"
+                    android:text="@string/pandharpur_info"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/akka"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/secular_one"
+                    android:padding="20dp"
+                    android:text="@string/akkalkot_info"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/gan"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/secular_one"
+                    android:padding="20dp"
+                    android:text="@string/gangapur_info"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/bar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/secular_one"
+                    android:padding="20dp"
+                    android:text="@string/barshi_info"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="16sp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </RelativeLayout>
