--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -46,7 +46,7 @@
         android:fontFamily="@font/secular_one"
         android:gravity="center"
         android:text="@string/apala_itihas"
-        android:textColor="@color/colorSecondaryDark"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="20sp"
         android:textStyle="bold" />
 
