--- a/app/src/main/res/layout/activity_link.xml
+++ b/app/src/main/res/layout/activity_link.xml
@@ -63,6 +63,14 @@
                 android:text="सोलापूर महानगरपालिका"
                 android:textSize="18sp" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@id/mnc"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="30dp"
+                android:background="@color/colorSecondaryDark" />
+
             <TextView
                 android:id="@+id/cop"
                 android:layout_width="match_parent"
@@ -76,6 +84,14 @@
                 android:padding="20dp"
                 android:text="पोलीस आयुक्तालय"
                 android:textSize="18sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@id/cop"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="30dp"
+                android:background="@color/colorSecondaryDark" />
 
             <TextView
                 android:id="@+id/sop"
@@ -91,6 +107,14 @@
                 android:text="पोलीस अधीक्षक"
                 android:textSize="18sp" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@id/sop"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="30dp"
+                android:background="@color/colorSecondaryDark" />
+
             <TextView
                 android:id="@+id/zp"
                 android:layout_width="match_parent"
@@ -104,6 +128,14 @@
                 android:padding="20dp"
                 android:text="जिल्हा परिषद"
                 android:textSize="18sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@id/zp"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="30dp"
+                android:background="@color/colorSecondaryDark" />
 
             <TextView
                 android:id="@+id/dc"
@@ -119,6 +151,14 @@
                 android:text="जिल्हा न्यायालय"
                 android:textSize="18sp" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@id/dc"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="30dp"
+                android:background="@color/colorSecondaryDark" />
+
             <TextView
                 android:id="@+id/su"
                 android:layout_width="match_parent"
@@ -132,6 +172,14 @@
                 android:padding="20dp"
                 android:text="सोलापूर विद्यापीठ"
                 android:textSize="18sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@id/su"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="30dp"
+                android:background="@color/colorSecondaryDark" />
 
             <TextView
                 android:id="@+id/pan"
@@ -147,8 +195,16 @@
                 android:text="विठ्ठल रुक्मिणी मंदिर समिती, पंढरपूर"
                 android:textSize="18sp" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@id/pan"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="30dp"
+                android:background="@color/colorSecondaryDark" />
+
             <TextView
-                android:id="@+id/pomo"
+                android:id="@+id/npr"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/pan"
@@ -161,11 +217,19 @@
                 android:text="राष्ट्रीय डाळिंब संशोधन केंद्र"
                 android:textSize="18sp" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@id/npr"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="30dp"
+                android:background="@color/colorSecondaryDark" />
+
             <TextView
                 android:id="@+id/water"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/pomo"
+                android:layout_below="@id/npr"
                 android:clickable="true"
                 android:drawableStart="@drawable/ic_baseline_public_24"
                 android:drawablePadding="20dp"
@@ -174,6 +238,14 @@
                 android:padding="20dp"
                 android:text="सयाजीराजे वॉटर पार्क, अकलूज"
                 android:textSize="18sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@id/water"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="30dp"
+                android:background="@color/colorSecondaryDark" />
 
             <TextView
                 android:id="@+id/akka"
