--- a/app/src/main/res/layout/activity_talent.xml
+++ b/app/src/main/res/layout/activity_talent.xml
@@ -111,7 +111,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/secular_one"
                     android:padding="20dp"
-                    android:text="pravingaikwad8997@gmail.com"
+                    android:text="@string/talent_mail_text"
                     android:textColor="@color/colorSecondaryDark"
                     android:textSize="16sp" />
 
